--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   shrine_images: ^2.0.2
   flutter_bloc: ^9.1.1
   fl_chart: ^1.1.1
+  webview_flutter: ^4.13.0
+  onesignal_flutter: ^5.3.4
+  change_app_package_name: ^1.5.0
 
 dev_dependencies:
   flutter_test:
