update firebase AI Logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   webview_flutter: ^4.13.0
   onesignal_flutter: ^5.3.4
   change_app_package_name: ^1.5.0
+  firebase_core: ^4.2.0
+  firebase_ai: ^3.4.0
 
 dev_dependencies:
   flutter_test:
